--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  infinite_scroll_pagination: ^3.2.0
   path: null
   provider: ^6.0.5
+  shared_preferences: ^2.1.0
   sqflite: null
-  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
